@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Changed: Copy Census event to multi indis now working (GEDFact_assistant/_CENS) (windmillway)
  - Merged: Merge changes r6416 - r6430 from the trunk. (windmillway)
  - Add new file modules/GEDFact_assistant/_CENS/gedrec_append.php to handle census event copying to multiple indis. (Requires Trunk svn 6430) (windmillway)
  - Merged: Merge changes r6394 - r6415 from the trunk. Changed placement of CENS assistant launch icon on "CENS add" window. (windmillway)
